# torchmd

./: .gitignore  LICENSE.md  MANIFEST.in  Makefile  README.md  argon_test.py  forcefield.yaml  pyproject.toml  requirements.txt  requirements_tests.txt  setup.py  test.py  test_argon.py  test_water.py
.github/workflows/: publish.yml  pythonpublish.yml  test.yml  test_and_publish.yml  workflow.yml
examples/: mytrajectory.xtc.npy  tutorial.ipynb
examples/logs/: monitor.csv
mywaterrun/: input.conf  input.yaml  monitor.csv  output.npy
scripts/: analysis.py  run.py  run_omm_compare.py  test.py  test_torchmd.py
test-data/1dihedral/: mol.rtf
test-data/1water/: structure.psf  top_water_ions.rtf
test-data/2watersperiodic/: structure.psf
test-data/3ions/: structure.psf
test-data/4dihedrals/: mol.prm  mol.psf
test-data/benzamidine/: mol.prm  mol.rtf
test-data/benzamidine-amber/: mol.frcmod  structure.prmtop
test-data/prod_alanine_dipeptide_amber/: input
test-data/singledihedral/: mol.prm  mol.psf  mol.rtf
test-data/sodiumperiodic/: tmp.xtc
test-data/thrombin-ligand-amber/: structure.prmtop
test-data/waterbox/: output.xtc  structure.psf
tests/: test_integrator.py  test_torchmd.py
tests/argon/: argon_forcefield.yaml
tests/cg/: acemdq.ckp.40  cg_structure.psf  cg_structure.xtc  conf.yaml  forcefield.yaml
tests/data/1dihedral/: mol.psf
tests/data/1water/: par_water_ions.prm
tests/data/2ions/: structure.psf
tests/data/2watersperiodic/: tmp.xtc
tests/data/3ions/: par_water_ions.prm  top_water_ions.rtf
tests/data/4dihedrals/: mol.rtf
tests/data/benzamidine/: mol.psf
tests/data/benzamidine-amber/: mol.mol2
tests/data/ligand-amber/: structure.prmtop
tests/data/prod_alanine_dipeptide_amber/: input.coor  structure.prmtop
tests/data/sodiumperiodic/: parameters.prm  structure.psf
tests/data/waterbox/: parameters.prm
tests/oscillator/: oscillator_forcefield.yaml
tests/prod_alanine_dipeptide_amber/: conf.yaml  input.coor  input.xsc
tests/reference/: argon.par  argon.rtf  parameters  structure.psf
tests/thrombin-ligand-amber/: conf.yaml
tests/trp-cage/: forcefield.yaml  trp-cage.py
tests/water/: structure.psf  water_conf.yaml  water_conf2.yaml  water_forcefield.yaml
torchmd/: __init__.py  _version.py  evaluator.py  forcefield.py  forces.py  integrator.py  minimizers.py  mycalc.py  neighbourlist.py  npzMol.py  npzmol.py  parameters.py  replica_exchange.py  run.py  run_RE.py  systems.py  util.py  utils.py  velocityverlet.py  wrapper.py
torchmd/forcefields/: ff_parmed.py  ff_yaml.py  forcefield.py
