[project]
name = "torchmd"
dynamic = ["version"]
description = "TorchMD. Molecular dynamics with pytorch"
authors = [{ name = "Acellera", email = "info@acellera.com" }]
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch",
    "pyyaml",
    "tqdm",
    "moleculekit",
    "pandas",
    "networkx",
    "scipy",         # Only needed for minimizers
    "parmed>=4.3.0",
    "numpy<2",
]
requires-python = ">=3.10"


[project.urls]
homepage = "https://github.com/torchmd/torchmd/"
repository = "https://github.com/torchmd/torchmd/"

[tool.setuptools.packages.find]
include = ["torchmd*", "LICENSE.md"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "torchmd/_version.py"
versionfile_build = "torchmd/_version.py"
tag_prefix = ""
parentdir_prefix = "torchmd-"

[build-system]
requires = ["setuptools", "toml", "versioneer[toml]==0.28"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "natsort>=8.4.0",
    "openmm>=8.4.0.post2",
    "pytest>=9.0.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "(sys_platform == 'linux' or sys_platform == 'win32') and platform_machine != 'aarch64' and platform_machine != 'arm64'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "(sys_platform == 'linux' or sys_platform == 'win32') and platform_machine != 'aarch64' and platform_machine != 'arm64'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
