[project]
name = "torchmd"
dynamic = ["version"]
description = "TorchMD. Molecular dynamics with pytorch"
authors = [{ name = "Acellera", email = "info@acellera.com" }]
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = ["torch", "pyyaml", "tqdm"]

[project.optional-dependencies]
full = [
    "moleculekit",
    "pandas",
    "networkx",
    "scipy",
    "parmed>=4.3.0",
    "numpy<2",
]


[project.urls]
homepage = "https://github.com/torchmd/torchmd/"
repository = "https://github.com/torchmd/torchmd/"

[tool.setuptools.packages.find]
include = ["torchmd*", "LICENSE.md"]

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=78", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["flake8>=7.3.0", "natsort>=8.4.0", "openmm>=8.4.0.post2", "pytest"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "(sys_platform == 'linux' or sys_platform == 'win32') and platform_machine != 'aarch64' and platform_machine != 'arm64'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "(sys_platform == 'linux' or sys_platform == 'win32') and platform_machine != 'aarch64' and platform_machine != 'arm64'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
